# neko

./: .gitignore  AUTHORS  configure.ac
include/: bsd.h  dewey.h  fts.h  neko.h  vis.h
src/: Makefile.am
src/libdewey/: Makefile.am  dewey.c
src/libneko/: Makefile.am  npkdatabase.cc  npkparse.cc  npktext.cc
src/libopenbsd/: Makefile.am  arc4random.c  arc4random_uniform.c  fts.c  pwcache.c  strmode.c  strtonum.c  useless.c  vis.c
src/neko/: Makefile.am  neko.in
src/pax/: Makefile.am  ar_io.c  ar_subs.c  buf_subs.c  cpio.c  file_subs.c  ftree.c  gen_subs.c  options.c  pat_rep.c  pax.c  sel_subs.c  tables.c  tar.c
src/vercmp/: Makefile.am  vercmp.c
src/wrappers/: Makefile.am  npk-installed.cc  npk-parse.cc
src/xchroot/: Makefile.am  xchroot.c
